Add dashboard layout (#13)
* WIP: add dashboard layout to workflow and analysis

* Can delete, rename and rerun analysis

* use arrowDown and up shortcuts to navigate on the list of analyses

* add new auth page

* add user dropdown in AppHeader

* feat(auth): Activate github auth

* remove client supabase middleware

* Handle error on file upload

* Fix(polling): improve polling system and add maxRetries = 50

* move supabase dir to root

* add rls for views

--- a/packages/gaas-ui/app/assets/css/main.css
+++ b/packages/gaas-ui/app/assets/css/main.css
@@ -1,6 +1,20 @@
 @import 'tailwindcss' theme(static);
 @import '@nuxt/ui-pro';
 
+/* @source "../../../.playground/.nuxt/ui";
+@source "../../../.playground/.nuxt/ui-pro";
+
+@source "../../../node_modules/@nuxt/ui-pro";
+@source "../../../node_modules/@nuxt/ui-pro/.nuxt/ui-pro";
+
+@source " ../../../../../node_modules/@nuxt/ui";
+@source " ../../../../../node_modules/@nuxt/ui-pro";
+@source "../../../node_modules/@nuxt/ui";
+@source "../../../node_modules/@nuxt/ui-pro"; */
+
+/* this work */
+@source "../../../../../node_modules/gaas-ui";
+
 @theme {
   --font-sans: 'Public Sans', sans-serif;
   --header-height: 5rem;
