add ui css within wiki css

--- a/packages/wiki/app/assets/css/main.css
+++ b/packages/wiki/app/assets/css/main.css
@@ -2,6 +2,7 @@
 @import '@nuxt/ui-pro';
 
 /* this work */
+@source "../../../../../node_modules/@gaas/ui";
 @source "../../../../../node_modules/@gaas/wiki";
 
 @theme {
