--- a/playground/app/assets/css/main.css
+++ b/playground/app/assets/css/main.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss' theme(static);
-@import '@nuxt/ui';
+@import '@nuxt/ui-pro';
+/* @import '@nuxt/ui'; */
 
 @source "../../../../node_modules/@gaas/ui";
 @source "../../../../node_modules/@gaas/wiki";
