comment font in @gaas/ui

--- a/packages/ui/app/assets/css/main.css
+++ b/packages/ui/app/assets/css/main.css
@@ -3,7 +3,7 @@
 /* this work */
 @source "../../../../../node_modules/@gaas/ui";
 
-@theme {
+/* @theme {
   --font-sans: 'Public Sans', sans-serif;
   --header-height: 5rem;
-}
+} */
