--- a/packages/wiki/app/assets/css/main.css
+++ b/packages/wiki/app/assets/css/main.css
@@ -1,11 +1,5 @@
-@import 'tailwindcss' theme(static);
+@import 'tailwindcss';
 @import '@nuxt/ui-pro';
 
-/* this work */
-@source "../../../../../node_modules/@gaas/ui";
-@source "../../../../../node_modules/@gaas/wiki";
-
-@theme {
-  --font-sans: 'Public Sans', sans-serif;
-  --header-height: 5rem;
-}
+@source "../../../node_modules/@gaas/ui";
+@source "../../../";
