--- a/packages/wiki/.playground/app/assets/css/main.css
+++ b/packages/wiki/.playground/app/assets/css/main.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss' theme(static);
-@import '@nuxt/ui-pro';
+@import 'tailwindcss';
+@import '@nuxt/ui';
 
 @source "../../../../../../node_modules/@gaas/ui";
