--- a/packages/wiki/app/assets/css/main.css
+++ b/packages/wiki/app/assets/css/main.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-@import '@nuxt/ui-pro';
+@import '@nuxt/ui';
 
 @source "../../../node_modules/@gaas/ui";
 @source "../../../";
