--- a/packages/ui/app/assets/css/main.css
+++ b/packages/ui/app/assets/css/main.css
@@ -7,3 +7,12 @@
 }
 
 @source "../../../";
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
